--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "author": "Ruzan Hizar.",
   "license": "Ruzan Hizar.",
   "dependencies": {
-    "bcrypt": "^3.0.3",
+    "bcrypt": ">=5.0.0",
     "circular-json": "^0.5.9",
     "config": "^3.0.0",
     "cookie-parser": "~1.4.3",
